<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal|center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivEmailLoginActivity"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/mail"
                    android:contentDescription="@string/email" />

                <EditText
                    android:id="@+id/etEmailLoginActivity"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailhint"
                    android:inputType="textEmailAddress"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivPasswordLoginActivity"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/password"
                    android:contentDescription="@string/password" />

                <EditText
                    android:id="@+id/etPasswordLoginActivity"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordhint"
                    android:inputType="textPassword"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

            </LinearLayout>

            <Button
                android:id="@+id/btLoginOnLoginActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/btstylelogin"
                android:text="@string/login" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/forgotpwd"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvRegisterHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:onClick="redirectRegisterActivityFromLoginActivity"
                android:text="@string/registerhere"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarLoginActivity"
            style="?android:attr/progressBarStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress" />

    </RelativeLayout>

</ScrollView>