<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@color/bgcolor"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal|center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivNameRegisterActivity"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/account"
                    android:contentDescription="@string/name" />

                <EditText
                    android:id="@+id/etNameRegisterActivity"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="#fff"
                    android:textColorHint="#d2d2d2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivEmailRegisterActivity"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/mail"
                    android:contentDescription="@string/email" />

                <EditText
                    android:id="@+id/etEmailRegisterActivity"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailhint"
                    android:inputType="textEmailAddress"
                    android:textColor="#fff"
                    android:textColorHint="#d2d2d2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivPasswordRegisterActivity"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/password"
                    android:contentDescription="@string/password" />

                <EditText
                    android:id="@+id/etPasswordRegisterActivity"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordhint"
                    android:inputType="textPassword"
                    android:textColor="#fff"
                    android:textColorHint="#d2d2d2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivPasswordAgainRegisterActivity"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/password"
                    android:contentDescription="@string/password" />

                <EditText
                    android:id="@+id/etPasswordAgainRegisterActivity"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordagainhint"
                    android:inputType="textPassword"
                    android:textColor="#fff"
                    android:textColorHint="#d2d2d2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivPhoneRegisterActivity"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/phone"
                    android:contentDescription="@string/password" />

                <EditText
                    android:id="@+id/etPhoneNumberRegisterActivity"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phonehint"
                    android:inputType="phone"
                    android:textColor="#fff"
                    android:textColorHint="#d2d2d2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivBranchRegisterActivity"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/branchstud"
                    android:contentDescription="@string/password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/enterbranch"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spBranchSelectorRegisterActivity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:entries="@array/branches" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivSemRegisterActivity"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/sem"
                    android:contentDescription="@string/sem" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/sem"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spSemesterRegisterActivity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:entries="@array/semesters" />

            </LinearLayout>

            <Button
                android:id="@+id/btRegisterOnRegisterActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/btstyleregister"
                android:text="@string/register" />

            <TextView
                android:id="@+id/tvLoginHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:onClick="redirectLoginActivityFromRegisterActivity"
                android:text="@string/alreadyregistered"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarRegisterActivity"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress" />

    </RelativeLayout>

</ScrollView>
